--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,7 +13,7 @@ sources:
     url: https://dommusikarchiv.martinus.at/site/werkverzeichnis/gallery/669.html
     license: public domain
     principal: true
-imslp:
+imslp: Missa_in_C_major_(Boog,_Johann_Nepomuk)
 parts:
   ottoni: Clarino I, II in C\\Timpani in C–G
 extra_abbreviations:
